# kernel_epsilon_machines

./: main.py  pyproject.toml  rkhs_epsilon.py  toy_datasets.py
notebooks/: 00_kernel_epsilon_machine.ipynb  01_sensitivity_analysis.ipynb  02_surrogate_testing.ipynb
